--- a/UsersService/src/main/resources/application.properties
+++ b/UsersService/src/main/resources/application.properties
@@ -1,1 +1,24 @@
+server.port=8081
+# Log pattern
+logging.pattern.console=%d{dd-MM-yy} %d{HH:mm:ss.SSS} %-20.20thread %5p %-25.25logger{25} %25M %4L %m%n
 
+# Database configuration
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/onlineshopping
+spring.datasource.username=root
+spring.datasource.password=Admin@402
+
+# Hibernate configuration
+# -----> Hibernate ddl auto (create, create-drop, update, validate)
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.show_sql = true
+spring.jpa.properties.hibernate.hbm2ddl.auto = update
+
+
+#eureka client
+eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka
+eureka.client.instance.preferIpAddress = true
+spring.application.name =USER-SERVICE
